--- a/vough_backend/Pipfile
+++ b/vough_backend/Pipfile
@@ -13,6 +13,7 @@ gunicorn = "==20.0.4"
 psycopg2 = "==2.8.6"
 django-heroku = "==0.3.1"
 colorama = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.8"
